--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.2.10",
+    "@angular/animations": "^7.2.15",
+    "@angular/cdk": "^7.3.7",
     "@angular/common": "^7.2.10",
     "@angular/compiler": "^7.2.10",
     "@angular/core": "^7.2.10",
@@ -44,13 +45,19 @@
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
     "core-js": "^2.6.5",
+    "datatables.net": "^1.10.19",
+    "datatables.net-bs4": "^1.10.19",
     "flag-icon-css": "^3.3.0",
     "font-awesome": "^4.7.0",
+    "json-server": "^0.15.0",
     "moment": "^2.24.0",
     "mutationobserver-shim": "^0.3.3",
     "ng2-charts": "^1.6.0",
     "ngx-bootstrap": "^3.2.0",
     "ngx-perfect-scrollbar": "^7.2.1",
+    "ngx-toastr": "^10.0.4",
+    "primeicons": "^1.0.0",
+    "primeng": "^7.1.3",
     "rxjs": "^6.4.0",
     "simple-line-icons": "^2.4.1",
     "ts-helpers": "^1.1.2",
@@ -66,6 +73,7 @@
     "@types/jasmine": "^3.3.12",
     "@types/jasminewd2": "^2.0.6",
     "@types/node": "^11.11.4",
+    "@types/toastr": "^2.1.37",
     "codelyzer": "^4.5.0",
     "jasmine-core": "^3.3.0",
     "jasmine-spec-reporter": "^4.2.1",
