--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "moment": "^2.24.0",
     "mutationobserver-shim": "^0.3.3",
     "ng2-charts": "^1.6.0",
+    "ng2-currency-mask": "^5.3.1",
     "ngx-bootstrap": "^3.2.0",
     "ngx-perfect-scrollbar": "^7.2.1",
     "ngx-toastr": "^10.0.4",
